client/lampenhaus/src/assets/global.css
* {
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    border-radius: 0 !important;
}

*:focus {
    outline: none;
}

html, body, #root, .lampenhaus {
    height: 100%;
}

body {
    background-color: #f3f3f3;
}

.cards-wrapper .container-fluid {
    min-height: calc(100% - 2rem);
    position: relative;
    margin: 1rem 0;
}

.entity-badge {
    margin-right: 5px;
}

.input-group {
    padding-bottom: 20px;
}

h4 {
    font-size: 1.3rem;
}

h5 {
    font-size: 1rem;
}

span[class^="fa fa-caret-"] {
    width: 8px;
}

.card {
    margin-bottom: 20px;
    position: relative;
}

.card-header {
    padding: 0.5rem;
    background-color: white;
}

.card-header-dropdown {
    height: 23px;
}

.card-header-dropdown button.btn {
    padding: 0 0.25rem;
}

.card-header-button {
    padding: 0 0.25rem;
    margin-top: 2px;
}

.card-body {
    overflow-y: auto;
    padding: 0.5rem;
}

.alert {
    padding: 0.375rem 0.75rem;
}

.cursor-pointer, .nav-item {
    cursor: pointer;
}

.list-group-item {
    border-left: none;
    border-right: none;
    padding: 0.25rem 0.5rem;
}

.list-group-item:first-child {
    border-top: none;
}

.list-group-item:last-child {
    border-bottom: none;
}

.maximized {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    min-width: 100%;
    min-height: 100%;
    max-width: 100%;
    max-height: 100%;
    z-index: 1000;
}

.maximized .card {
    height: 100%;
    margin-bottom: 0;
}

.blue-button {
    color: #007bff;
    cursor: pointer;
}

.text-ellipsis {
    text-overflow: ellipsis;
    white-space: nowrap;
    display: block;
    overflow: hidden;
}

.category-badge {
    border: 1px solid black;
    padding: 2px 3px;
    text-transform: capitalize;
    width: 75px;
    text-align: center;
}

.category-badge.small {
    padding: 0 3px;
    width: 63px;
}

.hidden {
    visibility: hidden;
}

.hierarchy-score-text {
    flex: 0 0 20px;
    text-align: right;
    font-size: 16px;
}

